--- a/project.yml
+++ b/project.yml
@@ -26,7 +26,7 @@ targets:
          INFOPLIST_FILE: ReadQiitaApp_SwiftUI/Info.plist
          MARKETING_VERSION: &marketing_version 1.0.0
          CURRENT_PROJECT_VERSIO: 1
-         PRODUCT_BUNDLE_IDENTIFIER: "masaharu.dobashi.ReadQiitaApp_SwiftUI"
+         PRODUCT_BUNDLE_IDENTIFIER: "masaharu.dobashi.ReadQiitaApp"
          PRODUCT_NAME: "$(TARGET_NAME)"
     options:
         developmentLanguage: ja
@@ -77,14 +77,16 @@ targets:
 packages:
  XcodeGen:
     url: https://github.com/yonaskolb/XcodeGen
-    version: 2.37.0
+    version: 2.39.1
  Realm:
     url: https://github.com/realm/realm-swift
-    version: 10.43.1
+    version: 10.48.0
  Rswift:
     url: https://github.com/mac-cain13/R.swift
     version: 7.4.0
-
+ Alamofire:
+    url: https://github.com/Alamofire/Alamofire
+    version: 5.9.0
 
 schemes:
   ReadQiitaApp_SwiftUI:
